--- a/dropship_project/templates/admin/index.html
+++ b/dropship_project/templates/admin/index.html
@@ -26,6 +26,21 @@
         font-size: 24px;
         font-weight: bold;
     }
+    .admin-actions {
+        margin-top: 20px;
+    }
+    .admin-actions a {
+        display: inline-block;
+        margin-right: 10px;
+        padding: 10px 15px;
+        background-color: #007bff;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+    }
+    .admin-actions a:hover {
+        background-color: #0056b3;
+    }
 </style>
 {% endblock %}
 
@@ -53,6 +68,9 @@
                 {% endfor %}
             </ul>
         </div>
+    </div>
+    <div class="admin-actions">
+        <a href="{% url 'admin:order_stats' %}">{% trans 'View Order Statistics' %}</a>
     </div>
 </div>
 {% endblock %}
