--- a/dropship_project/templates/base.html
+++ b/dropship_project/templates/base.html
@@ -5,35 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Dropship V2{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        #password-strength-meter {
-            height: 5px;
-            width: 0;
-            transition: width 0.3s, background-color 0.3s;
-            margin-top: 5px;
-        }
-    </style>
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Dropship V2</a>
-        <div class="navbar-nav ml-auto">
-            {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'user_profile' %}">Profile</a>
-                <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
-            {% else %}
-                <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
-            {% endif %}
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'user_dashboard' %}">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'user_profile' %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
+
     <div class="container mt-4">
         {% block content %}
         {% endblock %}
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/static/js/password_strength.js"></script>
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
